splitmuxsrc: test_splitmuxsrc_sparse_streams is racy with regards to subtitle pad handling
See https://gitlab.freedesktop.org/bilboed/gst-plugins-good/-/jobs/2576192
check.gst-plugins-good.elements_splitmuxsrc.test_splitmuxsrc_sparse_streams
Command
ORC_CODE='backup' GST_STATE_IGNORE_ELEMENTS='aasink autoaudiosrc autoaudiosink autovideosrc
autovideosink cacasink cairotextoverlay gtkglsink gtksink jackaudiosrc
jackaudiosink osssrc osssink osxaudiosink osxaudiosrc osxvideosrc osxvideosink
pulsesink pulsesrc pulsemixer v4l2src' GST_REGISTRY='/builds/bilboed/gst-plugins-good/gst-build/build/subprojects/gst-plugins-good/tests/check/elements_splitmuxsrc.registry' GST_PLUGIN_LOADING_WHITELIST='gstreamer:gst-plugins-base:gst-plugins-bad:gst-plugins-good@/builds/bilboed/gst-plugins-good/gst-build/build' GST_VALIDATE_CONFIG='/builds/bilboed/gst-plugins-good/gst-build/subprojects/gst-devtools/validate/data/valgrind.config' G_DEBUG='gc-friendly' GST_PLUGIN_PATH_1_0='/builds/bilboed/gst-plugins-good/gst-build/build' G_SLICE='always-malloc' GST_PLUGIN_SYSTEM_PATH_1_0='' CK_TIMEOUT_MULTIPLIER='80.0' CK_DEFAULT_TIMEOUT='20' GST_CHECKS='test_splitmuxsrc_sparse_streams' valgrind --trace-children=yes --tool=memcheck --leak-check=full --leak-resolution=high --errors-for-leak-kinds=definite,indirect --show-leak-kinds=definite,indirect --show-possibly-lost=no --num-callers=20 --error-exitcode=20 --gen-suppressions=all --log-file=/builds/bilboed/gst-plugins-good/validate-logs/check/gst-plugins-good/elements_splitmuxsrc/test_splitmuxsrc_sparse_streams.valgrind --suppressions=/builds/bilboed/gst-plugins-good/gst-build/subprojects/gst-devtools/validate/data/gstvalidate.supp --suppressions=/builds/bilboed/gst-plugins-good/gst-build/subprojects/gstreamer/tests/check/gstreamer.supp --suppressions=/builds/bilboed/gst-plugins-good/gst-build/subprojects/gst-plugins-base/tests/check/gst-plugins-base.supp --suppressions=/builds/bilboed/gst-plugins-good/gst-build/subprojects/gst-plugins-good/tests/check/gst-plugins-good.supp --suppressions=/builds/bilboed/gst-plugins-good/gst-build/subprojects/gst-plugins-bad/tests/check/gst-plugins-bad.supp --suppressions=/builds/bilboed/gst-plugins-good/gst-build/subprojects/gst-plugins-ugly/tests/check/gst-plugins-ugly.supp --suppressions=/builds/bilboed/gst-plugins-good/gst-build/subprojects/gst-libav/tests/check/gst-libav.supp --suppressions=/builds/bilboed/gst-plugins-good/gst-build/subprojects/gst-devtools/validate/data/gstvalidate.supp --suppressions=/builds/bilboed/gst-plugins-good/gst-build/subprojects/libnice/tests/libnice.supp --suppressions=/builds/bilboed/gst-plugins-good/gst-build/subprojects/libsoup/tests/libsoup.supp --suppressions=/builds/bilboed/gst-plugins-good/gst-build/subprojects/glib/glib.supp --suppressions=/builds/bilboed/gst-plugins-good/gst-build/subprojects/gst-python/testsuite/gstpython.supp --suppressions=/builds/bilboed/gst-plugins-good/gst-build/subprojects/gst-python/testsuite/python.supp /builds/bilboed/gst-plugins-good/gst-build/build/subprojects/gst-plugins-good/tests/check/elements_splitmuxsrc
elements_splitmuxsrc output
Running suite(s): splitmuxsrc
ERROR from element splitsrc: GStreamer encountered a general stream error.
Debugging info: ../subprojects/gst-plugins-good/gst/multifile/gstsplitmuxsrc.c(1115): gst_splitmux_find_output_pad (): /GstPipeline:pipeline1/GstSplitMuxSrc:splitsrc:
Stream part /tmp/splitmux-test-OW7FK0/out00001.ogg contains extra unknown pad <matroskademux1:subtitle_0>
ERROR from element splitsrc: GStreamer encountered a general stream error.
Debugging info: ../subprojects/gst-plugins-good/gst/multifile/gstsplitmuxsrc.c(1115): gst_splitmux_find_output_pad (): /GstPipeline:pipeline1/GstSplitMuxSrc:splitsrc:
Stream part /tmp/splitmux-test-OW7FK0/out00001.ogg contains extra unknown pad <matroskademux1:subtitle_0>
0%: Checks: 1, Failures: 1, Errors: 0
../subprojects/gst-plugins-good/tests/check/elements/splitmuxsrc.c:541:F:complex:test_splitmuxsrc_sparse_streams:0: Assertion 'GST_MESSAGE_TYPE (msg) == GST_MESSAGE_EOS' failed
Check suite splitmuxsrc ran in 7.312s (tests failed: 1)
You can mark the issues as 'known' by adding the following lines to the list of known issues
"FIXME 'check.gst-plugins-good.elements_splitmuxsrc.test_splitmuxsrc_sparse_streams' issues [REPORT A BUG in https://gitlab.freedesktop.org/gstreamer/ or use a proper bug description]": {
"tests": [
"check.gst-plugins-good.elements_splitmuxsrc.test_splitmuxsrc_sparse_streams"
],
"issues": [
{
'returncode': 1,
'sometimes': True,
},
],
},